# grpc-chat

./: .gitignore  README.md  basic.grpc.pb.cc  basic.grpc.pb.h  basic.pb.cc  basic.pb.h  basic.proto  basic_pb2.py  basic_pb2_grpc.py  server.py
client/: CMakeLists.txt  Client.cpp  form.fbp
client/stub/: basic.grpc.pb.cc  basic.pb.h
server/: basic.grpc.pb.h  basic.pb.cc  basic.proto  basic_pb2.py  basic_pb2_grpc.py  create_proto.bat  server.py
